@@ -10,10 +10,8 @@ import org.spongepowered.asm.mixin.injection.callback.CallbackInfo;
 import net.minecraft.server.level.ServerEntity;
 import net.minecraft.world.entity.Entity;
 import net.minecraft.world.phys.Vec3;
-import rbasamoyai.createbigcannons.base.PreciseProjectile;
 import rbasamoyai.createbigcannons.cannon_control.contraption.PitchOrientedContraptionEntity;
 import rbasamoyai.createbigcannons.multiloader.NetworkPlatform;
-import rbasamoyai.createbigcannons.network.ClientboundPreciseMotionSyncPacket;
 import rbasamoyai.createbigcannons.network.ClientboundPreciseRotationSyncPacket;
 
 @Mixin(ServerEntity.class)
@@ -23,12 +21,7 @@ public class ServerEntityMixin {
 
 	@Inject(method = "sendChanges", at = @At("HEAD"))
 	private void createbigcannons$sendChanges1(CallbackInfo ci) {
-		if (this.entity instanceof PreciseProjectile) {
-			Vec3 pos = this.entity.position();
-			Vec3 vel = this.entity.getDeltaMovement();
-			NetworkPlatform.sendToClientTracking(new ClientboundPreciseMotionSyncPacket(this.entity.getId(), pos.x, pos.y, pos.z, vel.x, vel.y, vel.z, this.entity.getYRot(), this.entity.getXRot(), this.entity.isOnGround()), this.entity);
-			this.entity.hasImpulse = false;
-		} else if (this.entity instanceof PitchOrientedContraptionEntity) {
+		if (this.entity instanceof PitchOrientedContraptionEntity) {
 			Vec3 pos = this.entity.position();
 			NetworkPlatform.sendToClientTracking(new ClientboundPreciseRotationSyncPacket(this.entity.getId(), this.entity.getYRot(), this.entity.getXRot()), this.entity);
 			this.entity.hasImpulse = false;
